# tech-challenge-fase1

./: .gitignore  Dockerfile  Makefile  README.md  main.py  mlflow.db  pyproject.toml
docs/: decisoes_tecnicas.md  ml_canvas.md  model_card.md  roadmap.md  roteiro_star.md
models/: logreg_pipeline.joblib  mlp_model.pt  preprocessor.joblib
notebooks/: 01_eda.ipynb  02_baselines.ipynb  03_mlp_pytorch.ipynb
src/api/: main.py  schemas.py
src/features/: download_data.py  preprocessing.py
src/models/: mlp.py  predict.py
tests/: test_api.py  test_schema.py  test_smoke.py
