[project]
name = "tech-challenge-fase1"
version = "0.1.0"
description = "Previsão de churn com MLP PyTorch — Tech Challenge Fase 1"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.7.0",
    "scikit-learn>=1.4.0",
    "torch>=2.3.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "mlflow>=2.13.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "pandera>=0.19.0",
    "pytest>=8.2.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "ipykernel>=6.29.0",
]